<resources>
    <string name="app_name">RouteNGO1</string>
    <string name="walk">Прогулка</string>
    <string name="bypass_place">Прогуляйтесь достопримечательностям
        или просто красивым местам</string>
    <string name="visit_event">Посетить мероприятие</string>
    <string name="long_visit">Единичное посещение</string>
    <string name="plane">Запланируйте поход на ближайшее мероприятие,
        которое будет интерсно именно вам.</string>
    <string name="visit_place">Предполагает продолжительное пребывание внутри</string>
    <string name="any">Составьте список из любых мест и событий</string>
    <string name="free">Свободный режим</string>
    <string name="ok">Ok</string>
    <string name="no_result">Результата нет. Эта функция еще не реализрвана.</string>
    <string name="ignore">Ignore</string>
    <string name="enter_r">Введите радиус</string>
    <string name="max_time_and_date">Введите день, до которого искать</string>
    <string name="start">Нажмите, чтобы продолжить</string>
</resources>
